# magabot-idmind-ros

./: README.md  magabotnode.cpp
Magabot_SerialControl/: LowLevelProtocol.ino  Magabot_SerialControl.ino
magabot/: Magabot.cpp  Magabot.cpp~  Magabot.h  keywords.txt
magabot/.hg/: dirstate  hgrc  undo.desc
magabot/.hg/cache/: branchheads  tags
magabot/.hg/store/: 00changelog.i  00manifest.i  fncache  undo
magabot/.hg/store/data/: _magabot.cpp.i  _magabot.h.i  keywords.txt.i
magabot/.hg/store/data/examples/_magabot___serial_control/: _high_level_protocol.ino.i  _low_level_protocol.ino.i  _magabot___serial_control.ino.i
magabot/examples/Magabot_SerialControl/: HighLevelProtocol.ino  LowLevelProtocol.ino  Magabot_SerialControl.ino
src/cereal_port/: CMakeLists.txt  package.xml
src/magabot/: CMakeLists.txt  package.xml
src/magabot/config_files/: magabot_base_local_planner_params.yaml  magabot_base_local_planner_params.yaml~  magabot_costmap_common_params.yaml  magabot_costmap_common_params.yaml~  magabot_local_costmap_params.yaml  magabot_move_base_params.yaml  rviz_config_SLAM.rviz  rviz_config_navigation.rviz
src/magabot/launch/: magabot.launch  magabot.launch~  magabot_2dnav.launch~
src/magabot/maps/: idmindfloor2.pgm  idmindfloor2.yaml
src/magabot/src/: joystick_node  joystick_node.cpp  magabot_node.cpp  magabot_node.cpp~
